small figure updates

--- a/mse/XRD_trends.ipynb
+++ b/mse/XRD_trends.ipynb
@@ -10,13 +10,13 @@
     "\n",
     "![Powder XRD spectra](https://raw.githubusercontent.com/enze-chen/learning_modules/master/fig/XRD_labeled.png)\n",
     "\n",
-    "This is an interactive notebook for playing around with some experimental parameters ($a$, $\\lambda$, $T$, etc.) and observing the effect on the resulting XRD spectra. I find XRD to be a particularly beautiful subject and I couldn't find any similar visualizations online. I hope this interactive demo will help you learn the _qualitative trends_ associated with powder XRD spectra. The actual numbers (e.g. intensities) should be taken with a grain of salt, but you can sift through the code and see that everything you've learned really is enough to produce a spectra!\n",
+    "This is an interactive notebook for playing around with some experimental parameters ($a$, $\\lambda$, $T$, etc.) and observing the effect on the resulting XRD spectra. I find XRD to be a particularly beautiful subject and I couldn't find any similar visualizations online. I hope this interactive demo will help you learn the _qualitative trends_ associated with powder XRD spectra.\n",
     "\n",
     "## How to run this notebook\n",
     "\n",
     "If you are viewing this notebook on [Google Colaboratory](https://colab.research.google.com/github/enze-chen/learning_modules/blob/master/mse/XRD_trends.ipynb), then all the software is already set up for you (hooray). If you want to run the notebook locally, make sure all the Python libraries in the [`requirements.txt`](https://github.com/enze-chen/learning_modules/blob/master/requirements.txt) file are installed.\n",
     "\n",
-    "To run this notebook, run all the cells (`Run All` in the menu or `Shift+Enter` for every cell) and then adjust the widgets at the very end. Click `Generate Plot` each time you change a setting.\n",
+    "To run this notebook, run all the cells (`Run All` in the menu or `Shift+Enter` for every cell) and then adjust the widgets at the very end. Click `Generate Plot` each time you change a setting. I've tidied up the code for those who want to learn how to programmatically generate such a plot, but I would recommend reading it only *after* you've had a chance to use the widget.\n",
     "\n",
     "## Acknowledgements\n",
     "\n",
