--- a/mse/Regular_solution_plot.ipynb
+++ b/mse/Regular_solution_plot.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "![Regular solution model](https://raw.githubusercontent.com/enze-chen/learning_modules/master/fig/reg_solu.png)\n",
     "\n",
-    "This is a short interactive notebook that aims to teach you how to create (more or less) the same figure that is pictured above. You will have the opportunity to practice scientific computing and Python functions. If you are unfamiliar with the regular solution model, I cover it briefly below."
+    "This is a short interactive notebook that aims to teach you how to create (more or less) the same figure that is pictured above. I've tried to provide ample hints such that this notebook is accessible to those who are new to Python. You will have the opportunity to practice writing Python functions and creating plots. If you are unfamiliar with the regular solution model, I also cover it briefly below."
    ]
   },
   {
