--- a/mse/XRD_trends.ipynb
+++ b/mse/XRD_trends.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "## Acknowledgements\n",
     "\n",
-    "I thank Nathan Bieberdorf and Han-Ming Hau for user testing and helpful suggestions. I also thank [Prof. Andrew Minor](https://mse.berkeley.edu/people_new/minor/) for teaching MATSCI 204: Materials Characterization and my advisor [Prof. Mark Asta](https://mse.berkeley.edu/people_new/asta/) for his unwavering encouragement for my education-related pursuits. Interactivity is enabled with the [`ipywidgets`](https://ipywidgets.readthedocs.io/en/stable/) library. You can view an interactive version at [Google Colaboratory](https://colab.research.google.com/github/enze-chen/learning_modules/blob/master/mse/XRD_trends.ipynb) or the `xrdinteract` tool on [nanoHUB](https://nanohub.org/tools/xrdinteract/)."
+    "I thank Nathan Bieberdorf, Han-Ming Hau, and Divya Ramakrishnan for user testing and helpful suggestions. I also thank [Prof. Andrew Minor](https://mse.berkeley.edu/people_new/minor/) for teaching MATSCI 204: Materials Characterization and my advisor [Prof. Mark Asta](https://mse.berkeley.edu/people_new/asta/) for his unwavering encouragement for my education-related pursuits. Interactivity is enabled with the [`ipywidgets`](https://ipywidgets.readthedocs.io/en/stable/) library. You can view an interactive version at [Google Colaboratory](https://colab.research.google.com/github/enze-chen/learning_modules/blob/master/mse/XRD_trends.ipynb) or the `xrdinteract` tool on [nanoHUB](https://nanohub.org/tools/xrdinteract/)."
    ]
   },
   {
