added Ising fig

--- a/mse/Regular_solution_plot.ipynb
+++ b/mse/Regular_solution_plot.ipynb
@@ -127,7 +127,7 @@
     "        beta (float): The interaction parameter in J/mol. Default value of 0.\n",
     "        \n",
     "    Returns:\n",
-    "        G_mix (numpy.darray): An array of Gibbs free energy values in J/mol.    \n",
+    "        A NumPy array of Gibbs free energy values in J/mol.    \n",
     "    \"\"\"\n",
     "    pass   # delete this line and write your own code\n",
     "# ---------------------- #"
