--- a/mse/Thermo_solution_models.ipynb
+++ b/mse/Thermo_solution_models.ipynb
@@ -25,7 +25,7 @@
     "In the first half of this notebook, everything is completed for you and you just have to run it. If you would like to try your hand at generating the curves yourself, try [the regular solution plotting exercise](https://github.com/enze-chen/learning_modules/blob/master/mse/Regular_solution_plot.ipynb). To execute each cell of this notebook and automatically advance to the next cell, press `Shift+Enter`. Or you can click `Run All` in the menu at the top. When done successfully, you'll see a widget slider pop up that you can adjust and observe the changes in the free energy curves.\n",
     "\n",
     "### Part 2\n",
-    "In the second half, there are a few sections for you to complete the code in order to construct the resulting phase diagram. This is delineated with the dashed lines as follows, and you should **only change what's inside**. You don't have to edit the text or code anywhere else. I've also included \"**TODO**\" to separate the background context from the actual instructions.\n",
+    "In the second half, there are a few sections for you to complete the code in order to construct the resulting phase diagram. These are delineated with the dashed lines as follows, and you should **only change what's inside**. You don't have to edit the text or code anywhere else. I've also included \"**TODO**\" to separate the background context from the actual instructions.\n",
     "```python\n",
     "# ---------------------- #\n",
     "# YOUR CODE HERE\n",
@@ -110,7 +110,7 @@
    "source": [
     "## Analytical functions\n",
     "\n",
-    "Here are the theoretical curves for the Gibbs free energy ($\\Delta G$) of the solid and liquid phases, with data taken from a certain material $A$ and a certain material $B$. We define $x$ to be the atomic fraction of $B$, which substitutes on the $A$ sites. $\\beta$ is the interaction parameter for the regular solution model, and has a default value of $0$ (ideal solution)."
+    "Here are the theoretical curves for the Gibbs free energy ($\\Delta G$) of the solid and liquid phases, with data taken from a certain material $A$ and a certain material $B$. We define $x$ to be the atomic fraction of $B$, which substitutes on the $A$ sites. $\\beta$ is the interaction parameter for the regular solution model, and has a default value of $0$ (ideal solution). If you want to try coding this part yourself, you might want to try the [regular solution notebook](https://github.com/enze-chen/learning_modules/blob/master/mse/Regular_solution_plot.ipynb)."
    ]
   },
   {
