--- a/mse/Regular_solution_plot.ipynb
+++ b/mse/Regular_solution_plot.ipynb
@@ -122,7 +122,7 @@
     "       for the AB regular solution. This part in triple-quotes is a docstring, btw.\n",
     "    \n",
     "    Args:\n",
-    "        x (numpy.darray): An array of atomic fractions of B.\n",
+    "        x (numpy.ndarray): An array of atomic fractions of B.\n",
     "        T (float): The temperature in Kelvin.\n",
     "        beta (float): The interaction parameter in J/mol. Default value of 0.\n",
     "        \n",
