--- a/mse/Thermo_solution_models.ipynb
+++ b/mse/Thermo_solution_models.ipynb
@@ -123,12 +123,12 @@
     "    \"\"\"This function plots the Gibbs free energy curve for the solid solution.\n",
     "    \n",
     "    Args:\n",
-    "        x (numpy.darray): An array of atomic fractions of B.\n",
+    "        x (numpy.ndarray): An array of atomic fractions of B.\n",
     "        T (float): The temperature in Kelvin.\n",
     "        beta (float): The interaction parameter in J/mol.\n",
     "        \n",
     "    Returns:\n",
-    "        G_s (numpy.darray): An array of Gibbs free energy values in kJ/mol.    \n",
+    "        G_s (numpy.ndarray): An array of Gibbs free energy values in kJ/mol.    \n",
     "    \"\"\"\n",
     "    S_mix = -8.314 * (np.multiply(x, np.log(x)) + np.multiply(1 - x, np.log(1 - x)))\n",
     "    H_mix = beta * np.multiply(x, 1 - x)\n",
@@ -140,12 +140,12 @@
     "    \"\"\"This function plots the Gibbs free energy curve for the liquid solution.\n",
     "    \n",
     "    Args:\n",
-    "        x (numpy.darray): An array of atomic fractions of B.\n",
+    "        x (numpy.ndarray): An array of atomic fractions of B.\n",
     "        T (float): The temperature in Kelvin.\n",
     "        beta (float): The interaction parameter in J/mol.\n",
     "        \n",
     "    Returns:\n",
-    "        G_l (numpy.darray): An array of Gibbs free energy values in kJ/mol.    \n",
+    "        G_l (numpy.ndarray): An array of Gibbs free energy values in kJ/mol.    \n",
     "    \"\"\"\n",
     "    S_A, S_B = (52.7, 59.9)\n",
     "    T_A, T_B = (1890 + 273, 1205 + 273)\n",
@@ -188,14 +188,14 @@
     "    \"\"\"This function calculates the common tangent of two convex curves.\n",
     "    \n",
     "    Args:\n",
-    "        x (numpy.darray): An array of atomic fractions of B.\n",
-    "        y1 (numpy.darray): y values for curve 1.\n",
-    "        y2 (numpy.darray): y values for curve 2.\n",
+    "        x (numpy.ndarray): An array of atomic fractions of B.\n",
+    "        y1 (numpy.ndarray): y values for curve 1.\n",
+    "        y2 (numpy.ndarray): y values for curve 2.\n",
     "        T (float): The temperature in Kelvin.\n",
     "        beta (float): The interaction parameter for the solid solution.\n",
     "        \n",
     "    Returns:\n",
-    "        line (numpy.darray): y values for the common tangent.\n",
+    "        line (numpy.ndarray): y values for the common tangent.\n",
     "        idmin (int): Index of the x-coordinate of the first tangent point.\n",
     "        idmax (int): Index of the x-coordinate of the second tangent point.\n",
     "    \"\"\"\n",
