--- a/mse/Monte_Carlo_Ising_model.ipynb
+++ b/mse/Monte_Carlo_Ising_model.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "![Ising model](https://raw.githubusercontent.com/enze-chen/learning_modules/master/fig/Ising_schematic.png)\n",
     "\n",
-    "This notebook guides you through the steps of setting up a Monte Carlo (MC) simulation of the 2D ferromagnetic [Ising model](https://en.wikipedia.org/wiki/Ising_model) and observing the characteristic phase transition at the critical temperature $T_c$. For more details, see the classical work by [Onsager, L. *Physical Review*, **65**, 1944](https://journals.aps.org/pr/abstract/10.1103/PhysRev.65.117). We will use a $NVT$ ensemble and the [Metroplis-Hastings algorithm](https://en.wikipedia.org/wiki/Metropolis%E2%80%93Hastings_algorithm). This notebook is far from being original as several similar notebooks exist online, but I have tried to keep the code simple and explanations plentiful so that *beginners* to Python and computational MSE can successfully complete everything."
+    "This notebook guides you through the steps of setting up a Monte Carlo (MC) simulation of the 2D ferromagnetic [Ising model](https://en.wikipedia.org/wiki/Ising_model) and observing the characteristic phase transition at the critical temperature $T_c$. For more details, see the classical work by [Onsager, L. *Physical Review*, **65**, 1944](https://journals.aps.org/pr/abstract/10.1103/PhysRev.65.117). We will use the [Metroplis-Hastings algorithm](https://en.wikipedia.org/wiki/Metropolis%E2%80%93Hastings_algorithm). This notebook is far from being original as several similar notebooks exist online, but I have tried to keep the code simple and explanations plentiful so that *beginners* to Python and computational MSE can successfully complete everything."
    ]
   },
   {
@@ -66,7 +66,7 @@
     "\n",
     "$$ \\chi = \\frac{\\langle M^2 \\rangle - \\langle M \\rangle^2}{k_B T L^2} $$\n",
     "\n",
-    "where $L$ is the size of one dimension. At the phase transition, we should see a divergence in these two quantities (which might not be perfect due to finite size effects).\n",
+    "where $L$ is the size of one dimension. At the phase transition, we should see a divergence in these two quantities (which might not be precise depending on the discretization, among other factors).\n",
     "\n",
     "## Known issues\n",
     "\n",
@@ -79,7 +79,7 @@
    "source": [
     "## Python library imports\n",
     "\n",
-    "These are all the required Python libraries."
+    "These are all the required Python libraries. As you can see, not that many!"
    ]
   },
   {
