added CA neighbors figure

--- a/mse/Machine_learning_Ising_model.ipynb
+++ b/mse/Machine_learning_Ising_model.ipynb
@@ -101,9 +101,11 @@
     "* As the code isn't heavily optimized, it will be slow if you run it for too many iterations or for too large of a system. Please be gentle. ❤\n",
     "\n",
     "\n",
-    "## Python library imports\n",
+    "## Import Python libraries\n",
     "\n",
-    "These are all the required Python libraries. `sklearn` is the library name for the popular [Scikit-learn](https://scikit-learn.org/stable/index.html) machine learning library in Python that we'll be using for convenience. We also seed the random number generator so we can all get reproducible results."
+    "These are all the required Python libraries. `sklearn` is the library name for the popular [Scikit-learn](https://scikit-learn.org/stable/index.html) machine learning library in Python that we'll be using for convenience. We also seed the random number generator so we can all get reproducible results.\n",
+    "\n",
+    "**TODO**: Run this cell with `Shift+Enter` before starting the others."
    ]
   },
   {
