--- a/mse/Monte_Carlo_Ising_model.ipynb
+++ b/mse/Monte_Carlo_Ising_model.ipynb
@@ -79,7 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Python library imports\n",
+    "## Import Python libraries\n",
     "\n",
     "These are all the required Python libraries. As you can see, not that many!"
    ]
