--- a/mse/Regular_solution_plot.ipynb
+++ b/mse/Regular_solution_plot.ipynb
@@ -63,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Python library imports\n",
+    "## Import Python libraries\n",
     "\n",
     "These are all the required Python libraries (so few!). We need [NumPy](https://numpy.org/) for the math and [Matplotlib](https://matplotlib.org/) for the plotting.\n",
     "\n",
