added XRD plotting module

--- a/mse/Cellular_automaton_models.ipynb
+++ b/mse/Cellular_automaton_models.ipynb
@@ -28,9 +28,13 @@
     "\n",
     "# ---------------------- #\n",
     "```\n",
-    "If you edit the code in a cell, just press `Shift+Enter` to run it again. You have to execute **all** the code cells in this notebook from top to bottom (so don't skip around). A number `[#]` will appear to the left of the code cell once it's done executing. When done successfully, you'll be able to generate some nice animations that simulate real MSE phenomena!\n",
-    "\n",
-    "\n",
+    "If you edit the code in a cell, just press `Shift+Enter` to run it again. You have to execute **all** the code cells in this notebook from top to bottom (so don't skip around). A number `[#]` will appear to the left of the code cell once it's done executing. When done successfully, you'll be able to generate some nice animations that simulate real MSE phenomena!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Acknowledgements\n",
     "\n",
     "Most of these ideas were taken from Chapter 11 of [LeSar, R. *Introduction to Computational Materials Science*, Cambridge, 2013](https://www.cambridge.org/core/books/introduction-to-computational-materials-science/327CCEC340E5C466CE08D6A6FD8520E1). Another good source is the review paper by [Raabe, D. *Annual Review of Materials Research*, **32**, 2002](https://www.annualreviews.org/doi/10.1146/annurev.matsci.32.090601.152855). I thank my advisor [Prof. Mark Asta](https://mse.berkeley.edu/people_new/asta/) for encouraging me in my education-related pursuits. An interactive version of this notebook can be found online at [Google Colaboratory](https://colab.research.google.com/github/enze-chen/learning_modules/blob/master/mse/Cellular_automaton_models.ipynb). "
@@ -42,10 +46,15 @@
    "source": [
     "## Background\n",
     "\n",
-    "CA were discovered in the 1940s by [Stanislaw Ulam](https://en.wikipedia.org/wiki/Stanislaw_Ulam) and [John von Neumann](https://en.wikipedia.org/wiki/John_von_Neumann) at Los Alamos National Laboratory in their work on self-replicating models for artifical life. CA were then brought to the attention of the general public in the 1970s by [John Conway](https://en.wikipedia.org/wiki/John_Horton_Conway) in his namesake [Game of Life](https://en.wikipedia.org/wiki/Conway%27s_Game_of_Life) and in the 1980s by [Stephen Wolfram](https://en.wikipedia.org/wiki/Stephen_Wolfram), who in 2002 published his findings in his book [*A New Kind of Science*](https://en.wikipedia.org/wiki/A_New_Kind_of_Science). \n",
+    "CA were discovered in the 1940s by [Stanislaw Ulam](https://en.wikipedia.org/wiki/Stanislaw_Ulam) and [John von Neumann](https://en.wikipedia.org/wiki/John_von_Neumann) at Los Alamos National Laboratory in their work on self-replicating models for artificial life. CA were then brought to the attention of the general public in the 1970s by [John Conway](https://en.wikipedia.org/wiki/John_Horton_Conway) in his namesake [Game of Life](https://en.wikipedia.org/wiki/Conway%27s_Game_of_Life) and in the 1980s by [Stephen Wolfram](https://en.wikipedia.org/wiki/Stephen_Wolfram), who in 2002 published his findings in his book [*A New Kind of Science*](https://en.wikipedia.org/wiki/A_New_Kind_of_Science). \n",
     "\n",
-    "In one sentence, traditional CA model the **dynamic** evolution of a **discrete** system by applying a set of **deterministic** rules. We elaborate more on this in the following subsection. Despite their simplicity, CA can model a variety of complex biological (e.g. reproduction) and physical phenomena (e.g. non-equilibrium thermodynamics like the [Belousov-Zhabotinsky reaction](https://en.wikipedia.org/wiki/Belousov%E2%80%93Zhabotinsky_reaction)). Some CA can even emulate a universal [Turing machine](https://en.wikipedia.org/wiki/Turing_machine).\n",
-    "\n",
+    "In one sentence, traditional CA model the **dynamic** evolution of a **discrete** system by applying a set of **deterministic** rules. We elaborate more on this in the following subsection. Despite their simplicity, CA can model a variety of complex biological (e.g. reproduction) and physical phenomena (e.g. non-equilibrium thermodynamics like the [Belousov-Zhabotinsky reaction](https://en.wikipedia.org/wiki/Belousov%E2%80%93Zhabotinsky_reaction)). Some CA can even emulate a universal [Turing machine](https://en.wikipedia.org/wiki/Turing_machine)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Structure and rules\n",
     "\n",
     "As its name implies, CA are composed of **cells** arranged in a discretized grid that is often rectangular, which we adopt here. The rectangular grid makes it convenient to index the cells with $(i,j)$, as shown in the figure below. In the traditional formulation, we restrict each cell to be in one of only two discrete **states** which you can think of as `on/off`, `alive/dead`, `dark/light`, or simply `1/0`.\n",
@@ -305,7 +314,8 @@
     "            evolve(arr=cells, n=n)\n",
     "        fig, ax = plt.subplots()\n",
     "        ax.imshow(cells)\n",
-    "        ax.tick_params(bottom=False, labelbottom=False, left=False, labelleft=False)\n",
+    "        ax.tick_params(bottom=False, labelbottom=False, \\\n",
+    "                       left=False, labelleft=False)\n",
     "        plt.show()\n",
     "\n",
     "button.on_click(on_button_clicked)"
@@ -317,14 +327,14 @@
    "source": [
     "## Spinodal decomposition\n",
     "\n",
-    "With the help of the [Animation](https://matplotlib.org/3.2.1/api/animation_api.html) class in Matplotlib, we're going to make a movie showing the spinodal decomposition process! We will follow the implementation of [Oono, Y. and Puri, S. *Physical Review Letters*, **58**, 1987](https://link.aps.org/doi/10.1103/PhysRevLett.58.836), which had the following features:\n",
+    "With the help of the [`Animation`](https://matplotlib.org/3.2.1/api/animation_api.html) class in Matplotlib, we're going to make a movie showing the spinodal decomposition process! We will follow the implementation of [Oono, Y. and Puri, S. *Physical Review Letters*, **58**, 1987](https://link.aps.org/doi/10.1103/PhysRevLett.58.836), which had the following features:\n",
     "* The geometry is a 2D rectangular lattice. \n",
     "* There is a tendency on a local level to phase segregate.\n",
     "* Matter must be conserved, where local changes occur by diffusion.\n",
     "\n",
     "Note that unlike traditional CA, each cell has a **continuous** state given by an **order parameter** defined as $\\eta \\equiv \\Delta c = c_a - c_b$; that is, the concentration difference between the two components in our binary mixture. The physics of the system that are incorporated into the transition rules are:\n",
     "\n",
-    "1. The tendency to order, given by the **hyperbolic tangent** function $A \\tanh \\left( \\eta_i(t) \\right)$.\n",
+    "1. The tendency to order, given by the [**hyperbolic tangent function**](https://mathworld.wolfram.com/HyperbolicTangent.html): $A \\tanh \\left( \\eta_i(t) \\right)$. This function forces the result towards $\\pm A$.\n",
     "1. Diffusion of species, given by $-D_a \\nabla^2 c_a = -D_a \\left( \\langle \\langle \\eta \\rangle \\rangle_i - \\eta_i \\right)$, which is the numerical approximation for the Laplacian. The term in double angle brackets is defined as\n",
     "\n",
     "$$ \\langle \\langle \\eta \\rangle \\rangle_i = \\frac{1}{6} \\sum_{j \\in \\text{nn}} \\eta_j + \\frac{1}{12} \\sum_{j \\in \\text{snn}} \\eta_j \\tag{1}$$\n",
@@ -422,11 +432,13 @@
     "    return (img,)\n",
     "\n",
     "def update(dummy):\n",
-    "    \"\"\"Update the frames in the animation.\n",
+    "    \"\"\"Update the frames in the animation by updating the states in\n",
+    "    the cells array.\n",
     "    \n",
     "    Args:\n",
-    "        dummy: Not used because animation doesn't depend on an \n",
-    "               incrementing variable.\n",
+    "        dummy: Not used because the animation doesn't depend on an \n",
+    "               incrementing variable, but this function requires\n",
+    "               an argument (I think).\n",
     "        \n",
     "    Returns:\n",
     "        A matplotlib.image.AxesImage object for the animation.\n",
@@ -439,7 +451,8 @@
     "    img = ax.imshow(cells)\n",
     "    return (img,)\n",
     "\n",
-    "ani = animation.FuncAnimation(fig, update, init_func=init, frames=3, interval=500, repeat=False)\n",
+    "ani = animation.FuncAnimation(fig, update, init_func=init, \\\n",
+    "                              frames=3, interval=500, repeat=False)\n",
     "ani"
    ]
   },
@@ -449,10 +462,13 @@
    "source": [
     "## Conclusion\n",
     "\n",
-    "I hope this notebook taught you a little bit about cellular automata and metallurgy theory, and gave you some Python practice. It was only an introduction, and I recommend checking out the links in the [Introduction](#Acknowledgements) if you want to learn more about CA. If you have any remaining questions or ideas for this and other modules, please don't hesitate to reach out.\n",
-    "\n",
-    "\n",
-    "\n",
+    "I hope this notebook taught you a little bit about cellular automata and metallurgy theory, and gave you some Python practice. It was only an introduction, and I recommend checking out the links in the [Introduction](#Acknowledgements) if you want to learn more about CA. If you have any remaining questions or ideas for this and other modules, please don't hesitate to reach out."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Extensions\n",
     "\n",
     "* Can you change the recrystallization CA simulation to consider a different neighborhood?\n",
