--- a/mse/Monte_Carlo_Ising_model.ipynb
+++ b/mse/Monte_Carlo_Ising_model.ipynb
@@ -126,7 +126,7 @@
     "\n",
     "We'll write a few helper functions that we'll call in the main body. For this first one, `create_spins()` will initialize the $L \\times L$ grid of spins randomly.\n",
     "\n",
-    "**TODO**: Complete the function below which will create an $L \\times L$ array of spins randomly selected from the set $\\{+1, -1\\}$. You might find the [`np.random.choice()`](https://numpy.org/devdocs/reference/random/generated/numpy.random.choice.html) helpful."
+    "**TODO**: Complete the function below which will create an $L \\times L$ array of spins randomly selected from the set $\\{+1, -1\\}$. You might find the [`np.random.choice()`](https://numpy.org/devdocs/reference/random/generated/numpy.random.choice.html) function helpful."
    ]
   },
   {
@@ -274,10 +274,10 @@
     "# Tests for compute_energy() and compute_mag()\n",
     "spins_all_pos = np.array([[1, 1], [1, 1]])  # should return E = -4 and M = 4\n",
     "print(f'The all positive case has a total energy of {compute_energy(spins_all_pos)} ' + \n",
-    "      f'and a total magnetization of {compute_mag(spins_all_pos)}.')\n",
+    "      f'and a total magnetization of {compute_mag(spins_all_pos)}')\n",
     "spins_alt = np.array([[1, -1], [-1, 1]])    # should return E = 4 and M = 0\n",
     "print(f'The alternating spins case has a total energy of {compute_energy(spins_alt)} ' + \n",
-    "      f'and a total magnetization of {compute_mag(spins_alt)}.')"
+    "      f'and a total magnetization of {compute_mag(spins_alt)}')"
    ]
   },
   {
@@ -292,7 +292,7 @@
     "* You might find the [`np.random.randint()`](https://numpy.org/devdocs/reference/random/generated/numpy.random.randint.html) method helpful.\n",
     "* Note that while we could compute the total energy twice, we only really need the energy *difference* $\\Delta E$. Furthermore, our system is discretized nicely such that the spins only take on $+1$ and $-1$. Can we leverage this somehow?\n",
     "* Don't forget we are using the Metroplis-Hastings algorithm, so you might need functions like `np.random.random()` and `np.exp()`.\n",
-    "* Let's be cognizant of memory usage and make this changes to `spins` in-place (i.e. don't make excessive copies of the `spins` array)."
+    "* Let's be cognizant of memory usage and make the changes to `spins` in-place (i.e. don't make excessive copies of the `spins` array)."
    ]
   },
   {
